# CallMeMaybe

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic_usage.cpp
include/cmm/: annotations.hpp  error.hpp  info.hpp  meta.hpp  value.hpp
include/cmm/detail/: registry.hpp
include/cmm/detail/entities/: class.hpp  data_member.hpp  entity.hpp  enum.hpp  enumerator.hpp  function.hpp  parameter.hpp  type.hpp  variable.hpp
include/cmm/detail/hash/: info_hash.hpp
include/cmm/detail/invocation/: thunk.hpp
